sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:16: error: value ==! is not a member of Int
}while(fin==!0)
          ^