sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

var a=0
var b=0
var fin=8

do{
	
	for (n<-0 to fin){
	a= getValeur(n)
	b= getValeur(n+1)
	if(a>b){echange(n,n+1)}
	}
	fin=fin-1
}while(fin==!0)
	
}
